# conciergent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  architecture.pen  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  pr.yml  release.yml
examples/: conciergent.yml  openapi-chat.yml  slack-app-manifest.yml
examples/locales/: en.yml  zh-TW.yml
src/conciergent/: __init__.py  app.py  cli.py  compactor.py  config.py  defaults.py  defaults.yml  i18n.py  identity.py  logger.py  oauth.py  oauth_handoff.py  reply.py  runner.py  runtime.py  turn.py
src/conciergent/agent/: __init__.py  chat_agent.py  compactor.py  pydantic_ai.py  runner.py
src/conciergent/agent/mcp/: __init__.py  client.py  storage.py
src/conciergent/i18n/: __init__.py  lang.py
src/conciergent/i18n/locales/: en.yml  zh-TW.yml
src/conciergent/locales/: en.yml  zh-TW.yml
src/conciergent/mcp/: __init__.py  client.py  storage.py
src/conciergent/store/: credential.py  message.py
src/conciergent/stores/: __init__.py  base.py  composite.py  memory.py  postgres.py  redis.py
src/conciergent/surfaces/: __init__.py  base.py
src/conciergent/surfaces/discord/: __init__.py  app.py  gateway.py  render.py  surface.py
src/conciergent/surfaces/line/: __init__.py  app.py  render.py  surface.py  webhook.py
src/conciergent/surfaces/slack/: __init__.py  app.py  install.py  render.py  surface.py  webhook.py
src/conciergent/templates/: conciergent.yml  manifest.yml
tests/: conftest.py  test_app.py  test_cli.py  test_compactor.py  test_config.py  test_identity.py  test_logger.py  test_mcp_storage.py  test_message_store.py  test_oauth.py  test_oauth_handoff.py  test_reply.py  test_runner.py  test_runtime.py  test_smoke.py  test_store.py
tests/agent/: test_chat_agent.py  test_compactor.py  test_pydantic_ai.py  test_runner.py
tests/agent/mcp/: test_client.py  test_storage.py
tests/mcp/: test_client.py  test_storage.py
tests/store/: test_credential.py  test_message.py
tests/stores/: test_backends.py  test_memory.py
tests/surfaces/: conftest.py
tests/surfaces/discord/: conftest.py  test_gateway.py  test_render.py
tests/surfaces/line/: conftest.py  test_render.py  test_surface.py  test_webhook.py
tests/surfaces/slack/: conftest.py  test_install.py  test_render.py  test_webhook.py
